<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ABC Cards+</string>
    <string name="about_title">About application</string>

    <string name="mn_share_app">Share app</string>
    <string name="mn_rate">Rate this program</string>
    <string name="mn_about">About</string>

    <string name="mn_all">All cards</string>

    <string name="mn_exit">Exit</string>
    <string name="mn_pref">Options</string>

    <!--Language-->
    <string-array name="lang_keys">
        <item>kk</item>
        <item>ru</item>
        <item>en</item>
    </string-array>

    <string-array name="lang_titles">
        <item>Қазақ</item>
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="lang_title">Select language</string>
    <string name="lang_summary">Choose application language</string>

    <!--Category-->
    <string name="grp_sound">Sounds</string>
    <string name="grp_view">View</string>

    <string name="music_title">Music</string>
    <string name="music_summary">Play startup music</string>

    <string name="back_music_title">Background music</string>
    <string name="back_music_summary">Play background music</string>

    <string name="image_sound_title">Sound of image</string>
    <string name="image_sound_summary">Play sound of image</string>

    <string name="awake_title">Stay awake</string>
    <string name="awake_summary">Main screens always on</string>

    <!--Main listView or 2 tiles-->
    <string-array name="tc_keys">
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="tc_titles">
        <item>2 Tile</item>
        <item>List</item>
    </string-array>
    <string name="tc_title">Main screen view</string>
    <string name="tc_summary">Set main screen mode</string>

    <!--Slide show-->
    <string-array name="ss_keys">
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <string-array name="ss_titles">
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
    </string-array>
    <string name="slide_title">Slide show interval</string>
    <string name="slide_summary">Default interval for slide show</string>

    <!--Theme-->
    <string-array name="th_keys">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="th_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Dark and light</item>
    </string-array>

    <string name="th_title">Theme</string>
    <string name="th_summary">Application appearance</string>

    <string name="mn_hide">Hide</string>
    <string name="mn_show">Show</string>
    <string name="mn_delete">Delete</string>
    <string name="mn_cancel">Cancel</string>
    <string name="mn_download">Download</string>

    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string formatted="false" name="alert_hide">Hide \'%s\'?</string>
    <string formatted="false" name="alert_show">Show \'%s\'?</string>
    <string formatted="false" name="alert_start_download">Download \'%s\'?</string>
    <string formatted="false" name="alert_delete_card">Delete \'%s\'?</string>
    <string formatted="false" name="info_download_comp">\'%s\' download is complete.</string>

    <string name="Card_Author">Author: %s</string>
    <!--<string name="Card_Version">Version №%d</string>-->
    <string name="Card_Uptodate">Up-to-date</string>
    <string formatted="false" name="Card_New_Size">Update size = %.2f MB</string>

    <!--<string name="Error_Download">Download error</string>-->
    <string name="Error_Connect">Error connecting</string>
    <!--<string name="Error_http">Not an HTTP connection</string>-->
    <!--<string name="Error_Insert">Error on insert %s</string>-->
    <!--<string formatted="false" name="Error_Delete">Error on delete %s delete count = %d</string>-->

    <!--<string name="crash_toast_text">Oops. Sorry error occurred. Please send this email and we will try to fix it as soon as it is possible.</string>-->
    <string name="mes_deleted">The item is deleted</string>
    <string name="mes_canceled">Downloading is canceled</string>
    <string name="mes_arc_broken">Archive is broken. Please download it again.</string>
</resources>
